# mischar-detector

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
data/: train.jsonl
data/processed/annotated/: real_briefs.jsonl
data/training/: val.jsonl
docs/: annotation-guide.md
eval_runs/20260624_004508/: metrics.json  predictions-gemma12b-tuned.jsonl  run_manifest.json  summary.md
eval_runs/20260627_175509/: metrics.json  predictions-gemma12b-prompted-modal.jsonl  predictions-gemma12b-tuned.jsonl  run_manifest.json  summary.md
scripts/training/: modal_app.py  train_primary.py  train_secondary.py
src/mischar/: __init__.py  cache.py  cli.py  config.example.yaml  config.py  constants.py  env.example  logging.py  pipeline.py  types.py
src/mischar/data/: annotation.py  datasets.py  perturbation.py  splits.py
src/mischar/data/sample_data/: train.jsonl  val.jsonl
src/mischar/eval/: harness.py  metrics.py  report.py
src/mischar/models/: client.py  embedding.py  gemini.py  mlx.py  modal_inference.py  ollama.py
src/mischar/prompts/: attribution.py  classification.py
src/mischar/scripts/data_construction/: build_casehold_set.py  generate_perturbations.py
src/mischar/scripts/eval/: run_eval.py
src/mischar/scripts/inference/: serve_adapter.py
src/mischar/scripts/training/: build_training_data.py  generate_sample_data.py  train_primary.py  train_secondary.py
src/mischar/stages/: attribute.py  classify.py  parse.py  resolve.py  retrieve.py
src/models/: client.py  gemini.py  mlx.py  ollama.py
