[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mischar-detector"
version = "0.1.0"
description = "Legal citation mischaracterization detector — a five-stage classification pipeline."
requires-python = ">=3.11"

dependencies = [
    "eyecite>=2.6",
    "httpx>=0.27",
    "pydantic>=2.7",
    "diskcache>=5.6",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
local = [
    "voyageai>=0.3",
    "google-genai>=1.0",
    "mlx>=0.21",
    "mlx-lm>=0.20",
]
training = [
    "modal>=0.64",
    "torch>=2.4",
    "transformers>=4.46",
    "peft>=0.13",
    "trl>=0.12",
    "bitsandbytes>=0.44",
    "accelerate>=1.0",
    "datasets>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.scripts]
mischar = "mischar.cli:main"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/mischar"]
